--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
