--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
     "react-router-dom": "^6.8.1",
+    "react-youtube": "^10.1.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
